--- a/stories/componentStories/dateHierarchyStories/dateHierarchyMethods.mdx
+++ b/stories/componentStories/dateHierarchyStories/dateHierarchyMethods.mdx
@@ -3,7 +3,9 @@
 <tr>
 <th>Sr. No.</th>
 <th>Methods</th>
-<th>Comments</th>
+<th width="120px">Inputs</th>
+<th width="120px">Return</th>
+<th width="150px">Comments</th>
 <th width="470px">Examples</th>
 </tr>
 </thead>
@@ -11,6 +13,8 @@
 <tr>
 <td>1</td>
 <td>getValues</td>
+<td>none</td>
+<td>Array containing all the selecetd dates</td>
 <td>Get all the selected values</td>
 <td>
 
@@ -24,6 +28,8 @@ alert(element.getValues());
 <tr>
 <td>2</td>
 <td>refresh</td>
+<td>none</td>
+<td>none</td>
 <td>Get the date hierarchy back to its initial form</td>
 <td>
 
@@ -37,6 +43,8 @@ element.refresh();
 <tr>
 <td>3</td>
 <td>setValues</td>
+<td>Array of dates to be selected</td>
+<td>undefined</td>
 <td>Set dates in date hierarchy</td>
 <td>
 
