--- a/stories/componentStories/dateHierarchyStories/dateHierarchyMethods.mdx
+++ b/stories/componentStories/dateHierarchyStories/dateHierarchyMethods.mdx
@@ -14,7 +14,7 @@
 <td>1</td>
 <td>getValues</td>
 <td>none</td>
-<td>Array containing all the selecetd dates</td>
+<td>Array containing all the selecetd dates<br/>Type:Array</td>
 <td>Get all the selected values</td>
 <td>
 
@@ -43,7 +43,7 @@ element.refresh();
 <tr>
 <td>3</td>
 <td>setValues</td>
-<td>Array of dates to be selected</td>
+<td>Array of dates to be selected<br/>Type:Array</td>
 <td>undefined</td>
 <td>Set dates in date hierarchy</td>
 <td>
