--- a/stories/componentStories/tagSelectorStories/tagSelectorMethods.mdx
+++ b/stories/componentStories/tagSelectorStories/tagSelectorMethods.mdx
@@ -13,7 +13,7 @@
 <tr>
 <td>1</td>
 <td>appendNewElement</td>
-<td>Object containing key and value</td>
+<td>Object containing key and value<br/>Type:Object</td>
 <td>undefined</td>
 <td>Append new element to the list</td>
 <td>
@@ -29,7 +29,7 @@ element.appendNewElement({ "key": "Test", "value": "BPO" });
 <td>2</td>
 <td>getSelectedValues</td>
 <td>none</td>
-<td>Object containing selected value and key</td>
+<td>Object containing selected value and key<br/>Type:Object</td>
 <td>Get all the selected values</td>
 <td>
 
@@ -44,7 +44,7 @@ alert(element.getSelectedValues());
 <tr>
 <td>3</td>
 <td>getSelectedCounter</td>
-<td></td>
+<td>none</td>
 <td>Data type: number</td>
 <td>Get count of selected elements</td>
 <td>
@@ -76,7 +76,7 @@ alert(element.getNewlyAdded());
 <tr>
 <td>5</td>
 <td>setSelectedItems</td>
-<td>Object containing values to be selected</td>
+<td>Object containing values to be selected<br/>Type:Object</td>
 <td>undefined</td>
 <td>Sets the selected elements</td>
 <td>
@@ -92,7 +92,7 @@ element.setSelectedItems([{ "value": "Albania", "key": "AL" }, { "value": "Turke
 <tr>
 <td>6</td>
 <td>setJsonData</td>
-<td>Object containing values and key</td>
+<td>Object containing values and key<br/>Type:Object</td>
 <td>undefined</td>
 <td>Sets the Json data to be displayed as a list</td>
 <td>
