--- a/stories/componentStories/datePickerStories/datePickerMethods.mdx
+++ b/stories/componentStories/datePickerStories/datePickerMethods.mdx
@@ -58,7 +58,7 @@ element.setValue('12/02/2019')
 </tr>
 <tr>
 <td>5</td>
-<td>setDataOption</td>
+<td>setDataOptions</td>
 <td>Object containing data options</td>
 <td>undefined</td>
 <td>Updates data options</td>
@@ -66,22 +66,22 @@ element.setValue('12/02/2019')
 
 ```javascript
 var element = document.getElementById("idOfElement");
-element.setDataOption({"lowerlimit","01/02/2015"})
+element.setDataOptions({"lowerlimit","01/02/2015"})
 ```
 
 </td>
 </tr>
 <tr>
 <td>5</td>
-<td>getDataOption</td>
+<td>getDataOptions</td>
 <td>none</td>
-<td>Object containing data options</td>
+<td>Object containing data options<br/>Type:Oject</td>
 <td>Gets data option values</td>
 <td>
 
 ```javascript
 var element = document.getElementById("idOfElement");
-alert(element.getDataOption());
+alert(element.getDataOptions());
 ```
 
 </td>
