--- a/stories/componentStories/datePickerStories/datePickerParams.mdx
+++ b/stories/componentStories/datePickerStories/datePickerParams.mdx
@@ -2,17 +2,18 @@
  
 |Sr. No.|Names|Purpose|Possible Values|Mandatory|
 |--- |--- |--- |--- |--- |
-|1|dateStringAlignment|Allows alignment of date either to left or right|Left, Right <br/><br/> Default: Left|No|
-|2|dateButtonPrimary|This shows primary buttons if showButtons parameter is enabled|Default: OK|No|
-|3|displayFormat|Format in which the date input should be accepted. This will depend upon the setting of “Display Unit”|MM/DD/YYYY, ,DD/MM/YYYY, M (&Y)Q (&Y) and Y <br/><br/> Default: MM/DD/YYYY|No|
-|4|disabledList|List of disabled dates|Can have n number of disabled dates.<br/><br/>For Example:  ["11/25/2000", "11/29/2000", "11/13/2019", "11/14/2019", "11/2011", "12/2011", "Q2/2011", "Q3/2011","2007", "2008"]|No|
-|5|iconAlignment|The calendar icon’s display location|Left, Right <br/><br/>Default: Left|No|
-|6|indicatorList|List of dates that need to have an indicator against them in display. Each indicator list will have a specific color and a list of dates associated with them|Can be n number of indicator.<br/><br/>For example: [{ "dates": ["01/10/2019","02/11/2019"], "color": "#333" }, { "dates": ["02/09/2019","01/08/2019"], "color": "#ff0000" }]|No|
-|7|isDisabled|Show disabled date picker|Default: False|No|
-|8|lowerLimit|Set lower date limit on the datepicker|Start date in given display format. <br/><br/>For example: 08/07/2017<br/><br/> Default: Today|No|
-|9|manualEntry|This will disable to manual date entry|Default: False|No|
-|10|showButtons|Show confirmation buttons below date picker|False and True.<br/><br/> Default: False <br/><br/> Name of the button can be changed to any other name <br/>date-btn-primary = “select”<br/>date-btn-secondary =”clear”|No|
-|11|showClearIcon|Option to show close button|Default: False|No|
-|12|showErrorMessage|This will show an error message|Default: True|No|
-|13|upperLimit|Set upper date limit on the datepicker|End date in given display format <br/><br/>For example: 30/12/2018<br/><br/> Default: None|No|
-|14|validationMessages|List of validation messages to be shown when validation fails|Checks Format of the date and if it exceeds the range<br/><br/>For example: [{"inValidFormat": "Invalid DOB"}, { "outsideRange": "Date is out of range"}] |No|
+|1|dateStringAlignment|Allows alignment of displayed value either to left or right|Left, Right <br/><br/> Default: Left|No|
+|2|dateButtonPrimary|Text on primary button if showButtons parameter is true|Default: OK|No|
+|3|defaultDate|Set default value to be displayed|Date, Quarter, Month or Year in displayFormat <br />Default: None|No|
+|4|displayFormat|Format in which the date input should be accepted. This will depend upon the setting of “Display Unit”|MM/DD/YYYY, DD/MM/YYYY, MM/YY, QQ/YY and YYYY <br/><br/> Default: MM/DD/YYYY|No|
+|5|disabledList|List of disabled dates|Can have n number of disabled dates.<br/><br/>For Example:  ["11/25/2000", "11/29/2000", "11/13/2019", "11/14/2019", "11/2011", "12/2011", "Q2/2011", "Q3/2011","2007", "2008"]|No|
+|6|iconAlignment|The calendar icon’s display location|Left, Right <br/><br/>Default: Left|No|
+|7|indicatorList|List of dates that need to have an indicator against them in display. Each indicator list will have a specific color and a list of dates associated with them|Can be n number of indicator.<br/><br/>For example: [{ "dates": ["01/10/2019","02/11/2019"], "color": "#333" }, { "dates": ["02/09/2019","01/08/2019"], "color": "#ff0000" }]|No|
+|8|isDisabled|Show disabled date picker|Default: False|No|
+|9|lowerLimit|Set lower date limit on the datepicker|Start date in given display format. <br/><br/>For example: 08/07/2017<br/><br/> Default: Today|No|
+|10|manualEntry|This will disable to manual date entry|Default: False|No|
+|11|showButtons|Show confirmation buttons below date picker|False and True.<br/><br/> Default: False <br/><br/> Name of the button can be changed to any other name <br/>date-btn-primary = “select”<br/>date-btn-secondary =”clear”|No|
+|12|showClearIcon|Option to show close button|Default: False|No|
+|13|showErrorMessage|This will show an error message|Default: True|No|
+|14|upperLimit|Set upper date limit on the datepicker|End date in given display format <br/><br/>For example: 30/12/2018<br/><br/> Default: None|No|
+|15|validationMessages|List of validation messages to be shown when validation fails|Checks Format of the date and if it exceeds the range<br/><br/>For example: [{"inValidFormat": "Invalid DOB"}, { "outsideRange": "Date is out of range"}] |No|
