--- a/stories/componentStories/datePickerStories/datePickerParams.mdx
+++ b/stories/componentStories/datePickerStories/datePickerParams.mdx
@@ -2,18 +2,19 @@
  
 |Sr. No.|Names|Purpose|Possible Values|Mandatory|
 |--- |--- |--- |--- |--- |
-|1|dateStringAlignment|Allows alignment of displayed value either to left or right|Left, Right <br/><br/> Default: Left|No|
-|2|dateButtonPrimary|Text on primary button if showButtons parameter is true|Default: OK|No|
-|3|defaultDate|Set default value to be displayed|Date, Quarter, Month or Year in displayFormat <br />Default: None|No|
-|4|displayFormat|Format in which the date input should be accepted. This will depend upon the setting of “Display Unit”|MM/DD/YYYY, DD/MM/YYYY, MM/YY, QQ/YY and YYYY <br/><br/> Default: MM/DD/YYYY|No|
-|5|disabledList|List of disabled dates|Can have n number of disabled dates.<br/><br/>For Example:  ["11/25/2000", "11/29/2000", "11/13/2019", "11/14/2019", "11/2011", "12/2011", "Q2/2011", "Q3/2011","2007", "2008"]|No|
-|6|iconAlignment|The calendar icon’s display location|Left, Right <br/><br/>Default: Left|No|
-|7|indicatorList|List of dates that need to have an indicator against them in display. Each indicator list will have a specific color and a list of dates associated with them|Can be n number of indicator.<br/><br/>For example: [{ "dates": ["01/10/2019","02/11/2019"], "color": "#333" }, { "dates": ["02/09/2019","01/08/2019"], "color": "#ff0000" }]|No|
-|8|isDisabled|Show disabled date picker|Default: False|No|
-|9|lowerLimit|Set lower date limit on the datepicker|Start date in given display format. <br/><br/>For example: 08/07/2017<br/><br/> Default: Today|No|
-|10|manualEntry|This will disable to manual date entry|Default: False|No|
-|11|showButtons|Show confirmation buttons below date picker|False and True.<br/><br/> Default: False <br/><br/> Name of the button can be changed to any other name <br/>date-btn-primary = “select”<br/>date-btn-secondary =”clear”|No|
-|12|showClearIcon|Option to show close button|Default: False|No|
-|13|showErrorMessage|This will show an error message|Default: True|No|
-|14|upperLimit|Set upper date limit on the datepicker|End date in given display format <br/><br/>For example: 30/12/2018<br/><br/> Default: None|No|
-|15|validationMessages|List of validation messages to be shown when validation fails|Checks Format of the date and if it exceeds the range<br/><br/>For example: [{"inValidFormat": "Invalid DOB"}, { "outsideRange": "Date is out of range"}] |No|
+|1|calendarLocation|Specify the location of the calendar to be displayed|up,down <br/><br/>Default: down|No|
+|2|dateStringAlignment|Allows alignment of displayed value either to left or right|Left, Right <br/><br/> Default: Left|No|
+|3|dateButtonPrimary|Text on primary button if showButtons parameter is true|String, max length 10 chars<br/><br/>Default: OK|No|
+|4|defaultDate|Set default value to be displayed|Date, Quarter, Month or Year in displayFormat <br/><br/>Default: None|No|
+|5|displayFormat|Format in which the date input should be accepted. This will depend upon the setting of “Display Unit”|MM/DD/YYYY, DD/MM/YYYY, MM/YY, QQ/YY and YYYY <br/><br/> Default: MM/DD/YYYY|No|
+|6|disabledList|List of disabled values|Can have n number of disabled values<br/><br/>For Example:  ["11/25/2000", "11/29/2000", "11/13/2019", "11/14/2019", "11/2011", "12/2011", "Q2/2011", "Q3/2011","2007", "2008"]|No|
+|7|iconAlignment|The calendar icon’s display location|Left, Right <br/><br/>Default: Left|No|
+|8|indicatorList|List of dates that need to have an indicator against them in display. Each indicator list will have a specific color and a list of dates associated with them.|Dates with color.<br/><br/>For example: [{ "dates": ["01/10/2019","02/11/2019"], "color": "#333" }, { "dates": ["02/09/2019","01/08/2019"], "color": "#ff0000" }]|No|
+|9|isDisabled|Disable date picker|true, false<br/><br/>Default: false|No|
+|10|lowerLimit|Set lower limit on the datepicker|Value in given display format. <br/><br/>For example: 08/07/2017,11/2011,2005<br/><br/> Default: Today/CurrentMonth/currentQuarter/CurrentYear|No|
+|11|manualEntry|Allow manual entry|true, false<br/><br/>Default: false|No|
+|12|showButtons|Show confirmation buttons below date picker|true, false<br/><br/> Default: false <br/><br/>Use dateButtonPrimary to set text for primary button.|No|
+|13|showClearIcon|Option to show close icon (x)|true, false<br/><br/>Default: false|No|
+|14|showErrorMessage|Show validation messages if true|true, false<br/><br/>Default: false|No|
+|15|upperLimit|Set upper limit on the datepicker|Value in given display format <br/><br/>For example: 30/12/2018,12/2022,2020<br/><br/> Default: None|No|
+|16|validationMessages|List of validation messages to be shown when validation fails|Set validation message for invalidFormat or OutsideRange <br/><br/>For example: [{"inValidFormat": "Invalid DOB"}, { "outsideRange": "Date is out of range"}]<br/><br/>Default:"Invalid date","Outside allowed range" |No|
