--- a/stories/componentStories/datePickerStories/datePickerMethods.mdx
+++ b/stories/componentStories/datePickerStories/datePickerMethods.mdx
@@ -81,7 +81,7 @@ element.setDataOptions({"lowerlimit","01/02/2015"})
 
 ```javascript
 var element = document.getElementById("idOfElement");
-alert(element.getDataOptions());
+console.log(element.getDataOptions());
 ```
 
 </td>
