--- a/stories/componentStories/tagSelectorStories/tagSelectorMethods.mdx
+++ b/stories/componentStories/tagSelectorStories/tagSelectorMethods.mdx
@@ -36,7 +36,7 @@ element.appendNewElement({ "key": "Test", "value": "BPO" });
 
 ```javascript
 var element = document.getElementById("idOfElement");
-alert(element.getSelectedValues());
+console.log(element.getSelectedValues());
 ```
 
 </td>
