--- a/stories/componentStories/dateHierarchyStories/dateHierarchyParams.mdx
+++ b/stories/componentStories/dateHierarchyStories/dateHierarchyParams.mdx
@@ -1,8 +1,8 @@
-|Sr. No.   |  Name | Purpose   | Possible Values  |
-|---|---|---|---|
-| 1  | lowerLimit  | Set lower date limit on the date hierarchy | Start date in MM/DD/YYYY format  |
-| 2  | upperLimit  |Set upper date limit on date hierarchy | End date in MM/DD/YYYY format|
-| 3  | disabledList  |List of dates/months/years that are to be shown as enabled on the date hierarchy | Default: Enable all<br/><br/>For example: ["01/01/2000","02/04/2000","w1/05/2000", "8/01/2000", "q1/2025"]<br/><br/>And disabled only those that are in the list|
-| 4  | height  |Set height of date hierarchy |Default:200px|
-| 5  | showQuarter  |Show quarters in the date hierarchy |True and False <br/><br/>Default:True |
-| 6  | showWeek  |Show weeks for each month in date hierarchy |True and False <br/><br/>Default:False|
+|Sr. No.   |  Name | Purpose   | Possible Values  |Mandatory|
+|---|---|---|---|---|
+| 1  | lowerLimit  | Set lower date limit on the date hierarchy. | Start date in MM/DD/YYYY format.<br/><br/>Default: Current Year<br/><br/>Example: 12/03/2020, 02/23/2020  |No|
+| 2  | upperLimit  |Set upper date limit on date hierarchy. | End date in MM/DD/YYYY format.<br/><br/>Default: Current Year + 1<br/><br/>Example: 11/12/2021, 03/12/2022|No|
+| 3  | disabledList  |List of dates/months/years that are to be shown as disabled on the date hierarchy. | Default: Enable all<br/><br/>For example: ["01/01/2000","02/04/2000","w1/05/2000", "8/01/2000", "q1/2025"]<br/><br/>And disabled only those that are in the list|No|
+| 4  | height  |Set height of date hierarchy. |Default:200px<br/><br/>For Example: 500px|No|
+| 5  | showQuarters  |Show quarters in the date hierarchy. |true and false <br/><br/>Default:true |No|
+| 6  | showWeeks  |Show weeks for each month in date hierarchy. |true and false <br/><br/>Default:false|No|
