--- a/stories/componentStories/dateHierarchyStories/dateHierarchyMethods.mdx
+++ b/stories/componentStories/dateHierarchyStories/dateHierarchyMethods.mdx
@@ -14,8 +14,8 @@
 <td>1</td>
 <td>getValues</td>
 <td>none</td>
-<td>Array containing all the selecetd dates<br/>Type:Array</td>
-<td>Get all the selected values</td>
+<td>Array containing all the selected dates.<br/>Type:String[]</td>
+<td>Get all the selected values.</td>
 <td>
 
 ```javascript
@@ -30,7 +30,7 @@ alert(element.getValues());
 <td>refresh</td>
 <td>none</td>
 <td>none</td>
-<td>Get the date hierarchy back to its initial form</td>
+<td>Get the date hierarchy back to its initial form.</td>
 <td>
 
 ```javascript
@@ -43,9 +43,9 @@ element.refresh();
 <tr>
 <td>3</td>
 <td>setValues</td>
-<td>Array of dates to be selected<br/>Type:Array</td>
+<td>Array of dates to be selected.<br/>Type:String[]</td>
 <td>undefined</td>
-<td>Set dates in date hierarchy</td>
+<td>Set dates in date hierarchy.</td>
 <td>
 
 ```javascript
