--- a/stories/componentStories/datePickerStories/datePickerParams.mdx
+++ b/stories/componentStories/datePickerStories/datePickerParams.mdx
@@ -7,14 +7,14 @@
 |3|dateButtonPrimary|Text on primary button if showButtons parameter is true.|String, maximum length 10 characters.<br/><br/>Default: OK|No|
 |4|defaultDate|Set default value to be displayed.|Date, Quarter, Month or Year in displayFormat. <br/><br/>Default: None|No|
 |5|displayFormat|Format in which the date input should be accepted. This will depend upon the setting of “Display Unit”.|MM/DD/YYYY, DD/MM/YYYY, MM/YY, QQ/YY and YYYY <br/><br/> Default: MM/DD/YYYY|No|
-|6|disabledList|List of disabled values.|Can have n number of disabled values.<br/><br/>Default:none<br/><br/>For Example:  ["11/25/2000", "11/29/2000", "11/13/2019", "11/14/2019", "11/2011", "12/2011", "Q2/2011", "Q3/2011","2007", "2008"]|No|
+|6|disabledList|List of disabled values (date/month/quarter/year).|Array of disabled values.<br/><br/>Default:none<br/><br/>For Example:  ["11/25/2000", "11/29/2000", "11/13/2019", "11/14/2019", "11/2011", "12/2011", "Q2/2011", "Q3/2011","2007", "2008"]|No|
 |7|iconAlignment|The calendar icon’s display location.|Left, Right <br/><br/>Default: Left|No|
-|8|indicatorList|List of dates that need to have an indicator against them in display. Each indicator list will have a specific color and a list of dates associated with them.|Dates with color.<br/><br/>Default:none<br/><br/>For example: [{ "dates": ["01/10/2019","02/11/2019"], "color": "#333" }, { "dates": ["02/09/2019","01/08/2019"], "color": "#ff0000" }]|No|
+|8|indicatorList|List of dates that need to have an indicator against them in display. Each indicator list will have a specific color and a list of dates associated with them.|Array of dates with color.<br/><br/>Default:none<br/><br/>For example: [{ "dates": ["01/10/2019","02/11/2019"], "color": "#333" }, { "dates": ["02/09/2019","01/08/2019"], "color": "#ff0000" }]|No|
 |9|isDisabled|Disable date picker.|true, false<br/><br/>Default: false|No|
-|10|lowerLimit|Set lower limit on the datepicker.|Value in given display format. <br/><br/>For example: 08/07/2017,11/2011,2005<br/><br/> Default: Default: Today/Current Month/Current Quarter/Current Year|No|
+|10|lowerLimit|Set lower limit on the datepicker.|Value in given display format.<br/><br/>  Default: Today/Current Month/Current Quarter/Current Year <br/><br/>For example: 08/07/2017,11/2011,2005|No|
 |11|manualEntry|Allow manual entry.|true, false<br/><br/>Default: false|No|
 |12|showButtons|Show confirmation buttons below date picker.|true, false<br/><br/> Default: false <br/><br/>Use dateButtonPrimary to set text for primary button.|No|
 |13|showClearIcon|Option to show close icon (x).|true, false<br/><br/>Default: false|No|
 |14|showErrorMessage|Show validation messages if true.|true, false<br/><br/>Default: false|No|
-|15|upperLimit|Set upper limit on the datepicker.|Value in given display format. <br/><br/>For example: 30/12/2018,12/2022,2020<br/><br/> Default: None|No|
-|16|validationMessages|List of validation messages to be shown when validation fails.|Set validation message for invalidFormat or OutsideRange. <br/><br/>For example: [{"inValidFormat": "Invalid DOB"}, { "outsideRange": "Date is out of range"}]<br/><br/>Default:"Invalid date","Outside allowed range" |No|
+|15|upperLimit|Set upper limit on the datepicker.|Value in given display format. <br/><br/> Default: None<br/><br/>For example: 30/12/2018,12/2022,2020|No|
+|16|validationMessages|List of validation messages to be shown when validation fails.|Set validation message for invalidFormat or OutsideRange. <br/><br/>Default:"Invalid date","Outside allowed range" <br/><br/>For example: [{"inValidFormat": "Invalid DOB"}, { "outsideRange": "Date is out of range"}]|No|
