--- a/stories/componentStories/datePickerStories/datePickerMethods.mdx
+++ b/stories/componentStories/datePickerStories/datePickerMethods.mdx
@@ -66,7 +66,7 @@ element.setValue('12/02/2019')
 
 ```javascript
 var element = document.getElementById("idOfElement");
-element.setDataOptions({"lowerlimit","01/02/2015"})
+element.setDataOptions({"lowerlimit":"01/02/2015"})
 ```
 
 </td>
