--- a/stories/componentStories/datePickerStories/datePickerEvents.mdx
+++ b/stories/componentStories/datePickerStories/datePickerEvents.mdx
@@ -86,12 +86,12 @@ function onChangeHandler(){
 
 ```javascript
 <script>
-function onKeyupHandler(){
-    alert(' onKeyupHandler called ');
+function onKeyUpHandler(){
+    alert(' onKeyUpHandler called ');
 }
 </script>
 
-<date-picker onKeyup="onKeyupHandler()"></date-picker>
+<date-picker onKeyup="onKeyDpHandler()"></date-picker>
 ```
 
 </td>
@@ -104,12 +104,12 @@ function onKeyupHandler(){
 
 ```javascript
 <script>
-function onKeydownHandler(){
-    alert(' onKeydownHandler called ');
+function onKeyDownHandler(){
+    alert(' onKeyDownHandler called ');
 }
 </script>
 
-<date-picker onKeydown="onKeydownHandler()"></date-picker>
+<date-picker onKeydown="onKeyDownHandler()"></date-picker>
 ```
 
 </td>
@@ -122,12 +122,12 @@ function onKeydownHandler(){
 
 ```javascript
 <script>
-function onKeyleftHandler(){
-    alert(' onKeyleftHandler called ');
+function onKeyLeftHandler(){
+    alert(' onKeyLeftHandler called ');
 }
 </script>
 
-<date-picker onKeyleft="onKeyleftHandler()"></date-picker>
+<date-picker onKeyLeft="onKeyLeftHandler()"></date-picker>
 ```
 
 </td>
@@ -140,12 +140,12 @@ function onKeyleftHandler(){
 
 ```javascript
 <script>
-function onKeyrightHandler(){
-    alert(' onKeyrightHandler called ');
+function onKeyRightHandleR(){
+    aleRt(' onKeyRightHandler called ');
 }
 </script>
 
-<date-picker onKeyright="onKeyrightHandler()"></date-picker>
+<date-picker onKeyRight="onKeyRightHandler()"></date-picker>
 ```
 
 </td>
