--- a/stories/componentStories/tagSelectorStories/tagSelectorEvents.mdx
+++ b/stories/componentStories/tagSelectorStories/tagSelectorEvents.mdx
@@ -93,12 +93,12 @@ function onChangeHandler(){
 
 ```javascript
 <script>
-function onKeyupHandler(){
-    alert(' onKeyupHandler called ');
+function onKeyUpHandler(){
+    alert(' onKeyUpHandler called ');
 }
 </script>
 
-<tag-selector onKeyup="onKeyupHandler()"></tag-selector>
+<tag-selector onKeyUp="onKeyUpHandler()"></tag-selector>
 ```
 
 </td>
@@ -111,12 +111,12 @@ function onKeyupHandler(){
 
 ```javascript
 <script>
-function onKeydownHandler(){
-    alert(' onKeydownHandler called ');
+function onKeyDownHandler(){
+    alert(' onKeyDownHandler called ');
 }
 </script>
 
-<tag-selector onKeydown="onKeydownHandler()"></tag-selector>
+<tag-selector onKeyDown="onKeyDownHandler()"></tag-selector>
 ```
 
 </td>
