--- a/stories/componentStories/tagSelectorStories/tagSelectorMethods.mdx
+++ b/stories/componentStories/tagSelectorStories/tagSelectorMethods.mdx
@@ -110,7 +110,7 @@ element.setJsonData([{ "value": "Albania", "key": "AL" }, { "value": "Turkey", "
 <td>remove</td>
 <td>none</td>
 <td>none</td>
-<td>Remove list of selected elements</td>
+<td>Removes selected element</td>
 <td>
 
 
