--- a/stories/componentStories/datePickerStories/datePickerEvents.mdx
+++ b/stories/componentStories/datePickerStories/datePickerEvents.mdx
@@ -91,7 +91,7 @@ function onKeyUpHandler(){
 }
 </script>
 
-<date-picker onKeyup="onKeyDpHandler()"></date-picker>
+<date-picker onKeyup="onKeyUpHandler()"></date-picker>
 ```
 
 </td>
@@ -140,8 +140,8 @@ function onKeyLeftHandler(){
 
 ```javascript
 <script>
-function onKeyRightHandleR(){
-    aleRt(' onKeyRightHandler called ');
+function onKeyRightHandler(){
+    alert(' onKeyRightHandler called ');
 }
 </script>
 
