--- a/stories/componentStories/tagSelectorStories/tagSelectorEvents.mdx
+++ b/stories/componentStories/tagSelectorStories/tagSelectorEvents.mdx
@@ -13,7 +13,7 @@
 <tr>
 <td>1</td>
 <td>blur</td>
-<td>Script to be run when an element loses focus</td>
+<td>Script to be run when text box in the element loses focus</td>
 <td>
 
 ```javascript
@@ -31,7 +31,7 @@ function onBlurHandler(){
 <tr>
 <td>2</td>
 <td>focus</td>
-<td>Script to be run when an element gets focus</td>
+<td>Script to be run when text box in the element gets focus</td>
 <td>
 
 
