--- a/stories/componentStories/formGenerateStories/formParams.mdx
+++ b/stories/componentStories/formGenerateStories/formParams.mdx
@@ -1,4 +1,9 @@
 |Sr. No.   |  Name | Purpose   | Possible Values  |Mandatory|
 |---|---|---|---|---|
-|1|form||form.props.id: Set id for the form<br/><br/>form.props.action: Set the URL where you need to send the data on submit.<br/><br/>form.props.method: Specify how to send form data.<br/><br/>form.eventHandlers.event: Specify event to be triggered.<br/><br/>form.eventHandlers.handler: Specify event handler to be called.|Yes|
-|2|rows||rows.rowElement: Array that includes elementType, props and eventHandlers<br/><br/>rowElements.elementType: Specify the element type<br/>For example: "input", "select", "button" etc.<br/><br/>rowElements.props.type: Specify type of the element<br/>For example: "text","radio" etc.<br/><br/>rowElements.props.id: Set id of the element<br/><br/>rowElements.props.className: Set class name for the element<br/><br/>rowElements.props.title: Specify title for the element<br/><br/>rowElements.props.placeholder: Set placeholder for the element<br/><br/>rowElements.props.required: Set to show element is Mandatory<br/><br/>rowElements.eventHandlers.event: Specify event for the element<br/>For example:change, blur, input, select.<br/><br/>rowelements.eventHandlers.handler: Specify the handler name for the element<br/>For example:submitForm<br/><br/>rowLabel.name: Specify label name<br/><br/>rowLabel.props.className: Specify class name for the label<br/><br/>rowElements.options: Array of props and optionLabel<br/>For example:"options":[ { <br/> &nbsp;&nbsp;&nbsp;&nbsp;"props":{ <br/>&nbsp;&nbsp;&nbsp;&nbsp;"value":""<br/> },<br/>&nbsp;&nbsp;&nbsp;&nbsp;"optionLabel":"Select One"<br/>},<br/> {<br/>  &nbsp;&nbsp;&nbsp;&nbsp;"props":{ <br/> &nbsp;&nbsp;&nbsp;&nbsp;"value":"IN"<br/>},<br/>&nbsp;&nbsp;&nbsp;&nbsp;"optionLabel":"India"<br/>},<br/> {<br/> &nbsp;&nbsp;&nbsp;&nbsp;"props":{ <br/>&nbsp;&nbsp;&nbsp;&nbsp;"value":"US" <br/> },<br/>&nbsp;&nbsp;&nbsp;&nbsp; "optionLabel":"USA"<br/> }]|No|
+|1|form|Define attributes and events for form.|form.props.id: Set id for the form.<br/><br/>form.props.action: Set the URL where you need to send the data on submit.<br/><br/>form.props.method: Specify how to send form data.<br/><br/>form.eventHandlers.event: Specify event to be mapped with the event handler.<br/><br/>form.eventHandlers.handler: Specify event handler to be called.|No|
+|2|rows|Specify each row row in the form. Each row in form contains: label, and array of HTML Elements.|For example:<br/> "rows":[ <br/>{ <br/>"rowElements":[ <br/>{ <br/>"elementType":"input",<br/>"props":{ <br/>"type":"text",<br/>"id":"firstname",<br/>"className":"my-firstname-class",<br/>"title":"Firstname",<br/>"placeholder": "Your input",<br/> "required": "required"<br/>},<br/>"eventHandlers": [{<br/>"event": "focus",<br/> "handler": "onFocusHandler" }]<br/>}<br/>],<br/>"rowLabel":{ <br/>"name":"Firstname",<br/>"props":{ <br/>"className":"vs-body-regular-primary"<br/> }<br/> }<br/> }<br/>]|No|
+|3|rows.rowElements|Type : Array<br/> List of HTML elements in a row.|For example:<br/>"rowElements":[ <br/>{ <br/>"elementType":"input",<br/>"props":{ <br/>"type":"text",<br/>"id":"firstname",<br/>"className":"my-firstname-class",<br/>"title":"Firstname",<br/>"placeholder": "Your input",<br/> "required": "required"<br/>},<br/>"eventHandlers": [{<br/>"event": "focus",<br/> "handler": "onFocusHandler" }]<br/>}<br/>]|No|
+|4|rows.rowElements.elementType|Specify the element type.|Possible values: "input", "select", "textarea", "datepicker", "tagselector", "datehierarchy", "textarea", "img"<br/><br/>For example:<br/>"rowElements":[ <br/> { <br/>"elementType":"input"<br/>}<br/>]|No|
+|5|rows.rowElements.props|Allows html attributes.|Possible values: "id", "className", "title", "placeholder", "required"<br/><br/>For example:<br/>"props":{ <br/>"type":"text",<br/>"id":"firstname",<br/>"className":"my-firstname-class",<br/>"title":"Firstname",<br/>"placeholder": "Your input",<br/> "required": "required"<br/>}|No|
+|6|rows.rowElements.eventHandlers|List of events to be mapped with event handlers.|Possible values: <br/>event: "change", "blur", "input", "focus", "keyup", "keydown", "click", "select", "deselect", "keypress"<br/>handler: "functionName"<br/><br/>For example:<br/> "eventHandlers":[<br/>{<br/>"event":"submit",<br/>"handler":"submitForm"<br/>}<br/> ]|No|
+|7|rows.rowLabel|Specify lable name and its attributes.|For example:<br/>"rowLabel": {<br/>"name": "Firstname:",<br/>"props": {<br/>"class": "vs-body-regular-primary"<br/>}<br/>}|No|
