--- a/stories/componentStories/datePickerStories/datePickerEvents.mdx
+++ b/stories/componentStories/datePickerStories/datePickerEvents.mdx
@@ -10,7 +10,7 @@
 <tr>
 <td>1</td>
 <td>blur</td>
-<td>Script to be run when text box in the element loses focus.</td>
+<td>Fired when an element loses focus.</td>
 <td>
 
 ```javascript
@@ -28,7 +28,7 @@ function onBlurHandler(){
 <tr>
 <td>2</td>
 <td>focus</td>
-<td>Script to be run when text box in the element gets focus.</td>
+<td>Fired when an element receives focus.</td>
 <td>
 
 ```javascript
@@ -45,7 +45,7 @@ function onFocusHandler(){
 <tr>
 <td>3</td>
 <td>input</td>
-<td>Script to be run when an element gets user input</td>
+<td>Fired when the value of an element has been changed.</td>
 <td>
 
 ```javascript
@@ -63,7 +63,7 @@ function onInputHandler(){
 <tr>
 <td>4</td>
 <td>change</td>
-<td>Script to be run when change has occurred to the control</td>
+<td>Fired when element value is changed.</td>
 <td>
 
 ```javascript
@@ -81,7 +81,7 @@ function onChangeHandler(){
 <tr>
 <td>5</td>
 <td>keyup</td>
-<td>script to be run when user releases a key</td>
+<td>Fired when a key is released.</td>
 <td>
 
 ```javascript
@@ -99,7 +99,7 @@ function onKeyUpHandler(){
 <tr>
 <td>6</td>
 <td>keydown</td>
-<td>script to be run when user presses a key</td>
+<td>Fired when a key is pressed.</td>
 <td>
 
 ```javascript
