--- a/stories/componentStories/dateHierarchyStories/dateHierarchyEvents.mdx
+++ b/stories/componentStories/dateHierarchyStories/dateHierarchyEvents.mdx
@@ -13,7 +13,7 @@
 <tr>
 <td>1</td>
 <td>blur</td>
-<td>Script to be run when a text box in element loses focus.
+<td>Fired when an element loses focus.
 </td>
 <td>
 
@@ -32,7 +32,7 @@ function onBlurHandler(){
 <tr>
 <td>2</td>
 <td>focus</td>
-<td>Script to be run when an text box in the element gets focus.</td>
+<td>Fired when an element receives focus.</td>
 <td>
 
 
@@ -51,7 +51,7 @@ function onFocusHandler(){
 <tr>
 <td>3</td>
 <td>input</td>
-<td>Script to be run when a text box in element gets user input.</td>
+<td>Fired when the value of an element has been changed.</td>
 <td>
 
 
@@ -70,18 +70,18 @@ function onInputHandler(){
 <tr>
 <td>4</td>
 <td>valueChange</td>
-<td>Script to be run when change has occurred to the control</td>
+<td>Fired when element value is changed.</td>
 <td>
 
 
 ```javascript
 <script>
-function onChangeHandler(){
-    alert(' onChangeHandler called ');
+function onValueChangeHandler(){
+    alert(' onValueChangeHandler called ');
 }
 </script>
 
-<date-hierarchy onChange="onChangeHandler()"></date-hierarchy>
+<date-hierarchy onValueChange="onValueChangeHandler()"></date-hierarchy>
 ```
 
 </td>
